--- a/src/components/social-profile/profile.module.css
+++ b/src/components/social-profile/profile.module.css
@@ -1,4 +1,6 @@
 .profile{
+    padding-top: 10px;
+    margin-top: 10px;
     width: 300px;
     display: flex;
     flex-direction: column;
@@ -42,4 +44,25 @@
 
 .stats{
     background-color: #d2c4c4;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+
+.stats li{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.stats li:not(:last-child){
+    padding-right: 10px;
+}
+
+.stats li span{
+    margin: 5px;
 }
